--- a/src/app/components/addhouse/uploadimg/uploadimg.component.html
+++ b/src/app/components/addhouse/uploadimg/uploadimg.component.html
@@ -29,6 +29,7 @@
                 </div>
               </div>
               <br />
+              <div style="overflow-x: auto;">
               <table class="table">
                 <thead>
                   <tr>
@@ -60,6 +61,7 @@
                   </tr>
                 </tbody>
               </table>
+            </div>
               <div>
                 <button type="button" class="btn btn-success btn-s" (click)="uploader.uploadAll()"
                   [disabled]="!uploader.getNotUploadedItems().length">
