--- a/src/app/components/houses/updateimg-h/updateimg-h.component.css
+++ b/src/app/components/houses/updateimg-h/updateimg-h.component.css
@@ -1,6 +1,17 @@
 .float-right{
     margin: auto;
   }
+  table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    width: 100%;
+    border: 1px solid #ddd;
+  }
+  
+  th, td {
+    text-align: left;
+    padding: 8px;
+  }
   .logo-distributed h3{
     color:  #000000;
     font: normal 36px 'Cookie', cursive;
