--- a/src/app/components/lands/updateimg-l/updateimg-l.component.css
+++ b/src/app/components/lands/updateimg-l/updateimg-l.component.css
@@ -13,7 +13,10 @@
   .container{
     font-family: 'Poppins', 'Prompt', sans-serif;
   }
-  
+  .page-content  {
+    max-width: 100%;
+    height: auto!important;
+  }
   #breadcrumb-nav{
     list-style: none;
     margin: 0px;
