--- a/src/app/components/lands/updateimg-l/updateimg-l.component.html
+++ b/src/app/components/lands/updateimg-l/updateimg-l.component.html
@@ -98,7 +98,7 @@
                     </div>
                   </div>
                   <br />
-                  <table class="table">
+                  <table class="table page-content ">
                     <thead>
                       <tr>
                         <th width="50%">ชื่อ</th>
