--- a/src/app/components/addhouse/uploadimg/uploadimg.component.css
+++ b/src/app/components/addhouse/uploadimg/uploadimg.component.css
@@ -3,6 +3,17 @@
     height: auto!important;
    
   }
+  table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    width: 100%;
+    border: 1px solid #ddd;
+  }
+  
+  th, td {
+    text-align: left;
+    padding: 8px;
+  }
 #breadcrumb-nav{
     list-style: none;
     margin: 0px;
