--- a/src/app/components/group/groupping/groupping.component.html
+++ b/src/app/components/group/groupping/groupping.component.html
@@ -1,180 +1,165 @@
 <div class="Font">
 
-    <nav class="main-header  fixed-top navbar navbar-expand-lg navbar-white navbar-light bd-light">
-      <!-- Left navbar links -->
-  
-      <!-- SEARCH FORM
-      <form class="form-inline ml-3">
-        <div class="input-group input-group-sm">
-          <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
-          <div class="input-group-append">
-            <button class="btn btn-navbar" type="submit">
-              <i class="fas fa-search"></i>
-            </button>
+  <nav class="main-header  fixed-top navbar navbar-expand-lg navbar-white navbar-light bd-light">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-widget="pushmenu"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse " id="navbarText">
+      <ul class="navbar-nav mr-auto ">
+        <li *ngIf="auth.isLoggedIn()" class="nav-item active">
+          <a class="nav-link " routerLink="/home">หน้าหลัก <span class="sr-only">(current)</span></a>
+        </li>
+        <li *ngIf="auth.isLoggedIn()" class="nav-item ">
+          <a class="nav-link" routerLink="/houses"><i class="fa fa-home font-color-orange" aria-hidden="true"></i>
+            อสังหาสิ่งปลูกสร้างของฉัน<span class="sr-only">(current)</span></a>
+        </li>
+        <li *ngIf="auth.isLoggedIn()" class="nav-item ">
+          <a class="nav-link" routerLink="/lands"><i class="fa fa-tree font-color-green" aria-hidden="true"></i>
+            ที่ดินของฉัน<span class="sr-only">(current)</span></a>
+        </li>
+        <li *ngIf="auth.isLoggedIn()" class="nav-item ">
+          <a class="nav-link" routerLink="/groups"><i class="fa fa-users font-color-blue " aria-hidden="true"></i>
+            กลุ่มของฉัน <span class="sr-only">(current)</span></a>
+        </li>
+        <li *ngIf="auth.isLoggedIn()" class="nav-item ">
+          <a class="nav-link" routerLink="/recommend"><i class="fa fa-star font-color-gold" aria-hidden="true"></i>
+            แนะนำ<span class="sr-only">(current)</span></a>
+        </li>
+        <li *ngIf="auth.isLoggedIn()" class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false"><i class="fas fa-plus-circle"></i>
+            เพิ่มอสังหาริมทรัพย์
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" routerLink="/addhouse"><i class="fa fa-home font-color-orange "
+                aria-hidden="true"></i> อสังหาสิ่งปลูกสร้าง</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" routerLink="/addlands"><i class="fa fa-tree font-color-green"
+                aria-hidden="true"></i> ที่ดิน</a>
           </div>
-        </div>
-      </form> -->
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse " id="navbarText">
-        <ul class="navbar-nav mr-auto ">
-          <li class="nav-item">
-            <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
+        </li>
+      </ul>
+      <div class="d-flex flex-row-reverse">
+        <ul class="navbar-nav mr-auto">
+          <li *ngIf="auth.isLoggedIn()" class="nav-item">
+            <a class="nav-link" routerLink="/profile"><img src="{{ auth.getUserDetails()?.Profile1}}" alt=""><i
+                class="fa fa-user-circle"></i></a>
           </li>
           <li *ngIf="auth.isLoggedIn()" class="nav-item active">
-            <a class="nav-link " routerLink="/home">หน้าหลัก <span class="sr-only">(current)</span></a>
+            <a class="nav-link" routerLink="/profile">{{ auth.getUserDetails()?.Email }}</a>
           </li>
-          <li *ngIf="auth.isLoggedIn()" class="nav-item ">
-            <a class="nav-link" routerLink="/houses"><i class="fa fa-home font-color-orange" aria-hidden="true"></i>
-              อสังหาสิ่งปลูกสร้างของฉัน<span class="sr-only">(current)</span></a>
+          <li *ngIf="auth.isLoggedIn()" class="nav-item">
+            <a class="nav-link" routerLink="" (click)="auth.logout()">ออกจากระบบ</a>
           </li>
-          <li *ngIf="auth.isLoggedIn()" class="nav-item ">
-            <a class="nav-link" routerLink="/lands"><i class="fa fa-tree font-color-green" aria-hidden="true"></i>
-              ที่ดินของฉัน<span class="sr-only">(current)</span></a>
+          <li *ngIf="!auth.isLoggedIn()" class="nav-item">
+            <a class="nav-link" routerLink="/login">ลงชื่อเข้าใช้งาน</a>
           </li>
-          <li *ngIf="auth.isLoggedIn()" class="nav-item ">
-            <a class="nav-link" routerLink="/groups"><i class="fa fa-users font-color-blue " aria-hidden="true"></i>
-              กลุ่มของฉัน <span class="sr-only">(current)</span></a>
+          <li *ngIf="!auth.isLoggedIn()" class="nav-item">
+            <a class="nav-link" routerLink="/register">สมัคสมาชิก</a>
           </li>
-          <li *ngIf="auth.isLoggedIn()" class="nav-item ">
-            <a class="nav-link" routerLink="/recommend"><i class="fa fa-star font-color-gold" aria-hidden="true"></i>
-              แนะนำ<span class="sr-only">(current)</span></a>
+
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <aside class="main-sidebar sidebar-dark-primary elevation-4">
+    <!-- Brand Logo -->
+
+    <!-- Sidebar -->
+    <div class="sidebar" data-widget="pushmenu">
+      <!-- Sidebar Menu -->
+      <nav class="mt-2">
+        <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+          <!-- Add icons to the links using the .nav-icon class
+                     with font-awesome or any other icon font library -->
+          <li class="nav-header">
+            <h5>กลุ่ม</h5>
           </li>
-          <li *ngIf="auth.isLoggedIn()" class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false"><i class="fas fa-plus-circle"></i>
-              เพิ่มอสังหาริมทรัพย์
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" routerLink="/addhouse"><i class="fa fa-home font-color-orange "
-                  aria-hidden="true"></i> อสังหาสิ่งปลูกสร้าง</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" routerLink="/addlands"><i class="fa fa-tree font-color-green"
-                  aria-hidden="true"></i> ที่ดิน</a>
+          <li class="nav-header">
+            <button type="button" class="btn btn-success" [routerLink]="['/groups/creategroup']"><i
+              class="fas fa-plus-circle"></i> สร้างกลุ่มใหม่</button>
+          </li>
+          <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+            <div class="info">
+              <a class="d-block"></a>
             </div>
+          </div>
+          <li class="nav-item has-treeview menu-open">
+            <a class="nav-link active">
+              <i class="fas fa-users-cog"></i>
+              <p>
+                กลุ่มที่คุณจัดการ
+                <i class="right fas fa-angle-left"></i>
+              </p>
+            </a>
+            <ul class="nav nav-treeview">
+              <div class="user-panel mt-3 pb-3 mb-3 d-flex" *ngFor="let group of Groups">
+                <div class="image">
+                  <img src="{{group.Img}}" class="img-circle elevation-2" width="20px" height="20px">
+                </div>
+                <div class="info">
+                  <a [routerLink]="['/groups/groupfolder',group.ID_Group]" (click)="reload()"
+                    class="d-block">{{group.NameG}}</a>
+                </div>
+              </div>
+            </ul>
+          </li>
+          <li class="nav-item has-treeview menu-open">
+            <a class="nav-link active">
+              <i class="fas fa-users"></i>
+              <p>
+                กลุ่มที่คุณเป็นสมาชิก
+                <i class="right fas fa-angle-left"></i>
+              </p>
+            </a>
+            <ul class="nav nav-treeview">
+              <div class="user-panel mt-3 pb-3 mb-3 d-flex" *ngFor="let group of GDetails">
+                <div class="image">
+                  <img src="{{group.Img}}" class="img-circle elevation-2" width="20px" height="20px">
+                </div>
+                <div class="info">
+                  <a [routerLink]="['/groups/member/groupfolder',group.ID_Group]" class="d-block">{{group.NameG}}</a>
+                </div>
+              </div>
+            </ul>
           </li>
         </ul>
-        <div class="d-flex flex-row-reverse">
-  
-          <ul class="navbar-nav mr-auto">
-  
-            <li *ngIf="auth.isLoggedIn()" class="nav-item">
-              <a class="nav-link" routerLink="/profile"><img src="{{ auth.getUserDetails()?.Profile1}}" alt=""><i
-                  class="fa fa-user-circle"></i></a>
-            </li>
-            <li *ngIf="auth.isLoggedIn()" class="nav-item active">
-              <a class="nav-link" routerLink="/profile">{{ auth.getUserDetails()?.Email }}</a>
-            </li>
-            <li *ngIf="auth.isLoggedIn()" class="nav-item">
-              <a class="nav-link" routerLink="" (click)="auth.logout()">ออกจากระบบ</a>
-            </li>
-            <li *ngIf="!auth.isLoggedIn()" class="nav-item">
-              <a class="nav-link" routerLink="/login">ลงชื่อเข้าใช้งาน</a>
-            </li>
-            <li *ngIf="!auth.isLoggedIn()" class="nav-item">
-              <a class="nav-link" routerLink="/register">สมัคสมาชิก</a>
-            </li>
-  
-          </ul>
-        </div>
+      </nav>
+      <!-- /.sidebar-menu -->
+    </div>
+    <!-- /.sidebar -->
+  </aside>
+  <div class="content-wrapper">
+
+    <div class="container">
+      <hr>
+      <br><br><br><br>
+      <br><br><br><br>
+      <br><br><br><br>
+      <div class="text-center">
+        <h2><i class="fas fa-users"></i></h2>
+        <H1>กรุณากดเลือกกลุ่ม</H1>
       </div>
-    </nav>
-  
-  
-    <aside class="main-sidebar sidebar-dark-primary elevation-4">
-      <!-- Brand Logo -->
-  
-      <!-- Sidebar -->
-      <div class="sidebar">
-        <!-- Sidebar Menu -->
-        <nav class="mt-2">
-          <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-            <!-- Add icons to the links using the .nav-icon class
-                     with font-awesome or any other icon font library -->
-            <li class="nav-header">
-              <h5>กลุ่ม</h5>
-            </li>
-            <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-              <button type="button" class="btn btn-success"   [routerLink]="['/groups/creategroup']"><i class="fas fa-plus-circle"></i> สร้างกลุ่มใหม่</button>
-              <div class="info">
-                <a href="#" class="d-block"></a>
-              </div>
-            </div>
-            <li class="nav-item has-treeview menu-open">
-              <a href="#" class="nav-link active">
-                <i class="fas fa-users-cog"></i>
-                <p>
-                  กลุ่มที่คุณจัดการ
-                  <i class="right fas fa-angle-left"></i>
-                </p>
-              </a>
-              <ul class="nav nav-treeview">
-                <div class="user-panel mt-3 pb-3 mb-3 d-flex" *ngFor="let group of Groups">
-                  <div class="image">
-                    <img src="http://www.landvist.xyz/images/{{group.Img}}" class="img-circle elevation-2"
-                      alt="Group Image" width="20px" height="20px">
-                  </div>
-                  <div class="info">
-                    <a [routerLink]="['/groups/groupfolder',group.ID_Group]" class="d-block">{{group.NameG}}</a>
-                  </div>
-                </div>
-              </ul>
-            </li>
-            <li class="nav-item has-treeview menu-open">
-              <a href="#" class="nav-link active">
-                <i class="fas fa-users"></i>
-                <p>
-                  กลุ่มที่คุณเป็นสมาชิก
-                  <i class="right fas fa-angle-left"></i>
-                </p>
-              </a>
-              <ul class="nav nav-treeview">
-                <div class="user-panel mt-3 pb-3 mb-3 d-flex" *ngFor="let group of GDetails">
-                  <div class="image">
-                    <img src="http://www.landvist.xyz/images/{{group.Img}}" class="img-circle elevation-2"
-                      alt="Group Image" width="20px" height="20px">
-                  </div>
-                  <div class="info">
-                    <a [routerLink]="['/groups/member/groupfolder',group.ID_Group]" class="d-block">{{group.NameG}}</a>
-                  </div>
-                </div>
-              </ul>
-            </li>
-          </ul>
-        </nav>
-        <!-- /.sidebar-menu -->
-      </div>
-      <!-- /.sidebar -->
-    </aside>
-  
-    <div class="content-wrapper">
-  
-      <div class="container">
-          <hr>
-          <br><br><br><br>
-          <br><br><br><br>
-          <br><br><br><br>
-          <div class="text-center">
-            <h2><i class="fas fa-users"></i></h2>
-            <H1>กรุณากดเลือกกลุ่ม</H1>
-          </div>
-        </div>
-      <div class="container" >
-    
-  
-      </div>
-  
-  
-  
-  
-  
-      <br><br><br><br><br><br>
+    </div>
+    <div class="container">
+
+
+    </div>
+
+
+
+
+
+    <br><br><br><br><br><br>
     <br>
     <hr><br><br>
-  
-      <app-footer></app-footer>
-    </div>
+
+    <app-footer></app-footer>
   </div>
 
+</div>
