--- a/src/app/components/group/itemslist/itemslist.component.html
+++ b/src/app/components/group/itemslist/itemslist.component.html
@@ -1,28 +1,17 @@
 <div class="Font">
 
+  
   <nav class="main-header  fixed-top navbar navbar-expand-lg navbar-white navbar-light bd-light">
-    <!-- Left navbar links -->
-
-    <!-- SEARCH FORM
-        <form class="form-inline ml-3">
-          <div class="input-group input-group-sm">
-            <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
-            <div class="input-group-append">
-              <button class="btn btn-navbar" type="submit">
-                <i class="fas fa-search"></i>
-              </button>
-            </div>
-          </div>
-        </form> -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-widget="pushmenu"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-      aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse " id="navbarText">
       <ul class="navbar-nav mr-auto ">
-        <li class="nav-item">
-          <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
-        </li>
         <li *ngIf="auth.isLoggedIn()" class="nav-item active">
           <a class="nav-link " routerLink="/home">หน้าหลัก <span class="sr-only">(current)</span></a>
         </li>
@@ -57,9 +46,7 @@
         </li>
       </ul>
       <div class="d-flex flex-row-reverse">
-
         <ul class="navbar-nav mr-auto">
-
           <li *ngIf="auth.isLoggedIn()" class="nav-item">
             <a class="nav-link" routerLink="/profile"><img src="{{ auth.getUserDetails()?.Profile1}}" alt=""><i
                 class="fa fa-user-circle"></i></a>
@@ -81,30 +68,30 @@
       </div>
     </div>
   </nav>
-
-
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
 
     <!-- Sidebar -->
-    <div class="sidebar">
+    <div class="sidebar" data-widget="pushmenu">
       <!-- Sidebar Menu -->
       <nav class="mt-2">
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <!-- Add icons to the links using the .nav-icon class
-                       with font-awesome or any other icon font library -->
+                     with font-awesome or any other icon font library -->
           <li class="nav-header">
             <h5>กลุ่ม</h5>
           </li>
-          <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+          <li class="nav-header">
             <button type="button" class="btn btn-success" [routerLink]="['/groups/creategroup']"><i
-                class="fas fa-plus-circle"></i> สร้างกลุ่มใหม่</button>
+              class="fas fa-plus-circle"></i> สร้างกลุ่มใหม่</button>
+          </li>
+          <div class="user-panel mt-3 pb-3 mb-3 d-flex">
             <div class="info">
-              <a href="#" class="d-block"></a>
+              <a class="d-block"></a>
             </div>
           </div>
           <li class="nav-item has-treeview menu-open">
-            <a href="#" class="nav-link active">
+            <a  class="nav-link active">
               <i class="fas fa-users-cog"></i>
               <p>
                 กลุ่มที่คุณจัดการ
@@ -114,8 +101,8 @@
             <ul class="nav nav-treeview">
               <div class="user-panel mt-3 pb-3 mb-3 d-flex" *ngFor="let group of Groups">
                 <div class="image">
-                  <img src="http://www.landvist.xyz/images/{{group.Img}}" class="img-circle elevation-2"
-                    alt="Group Image" width="20px" height="20px">
+                  <img src="{{group.Img}}" class="img-circle elevation-2"
+                    width="20px" height="20px">
                 </div>
                 <div class="info">
                   <a [routerLink]="['/groups/groupfolder',group.ID_Group]" (click)="reload()"
@@ -125,7 +112,7 @@
             </ul>
           </li>
           <li class="nav-item has-treeview menu-open">
-            <a href="#" class="nav-link active">
+            <a class="nav-link active">
               <i class="fas fa-users"></i>
               <p>
                 กลุ่มที่คุณเป็นสมาชิก
@@ -135,8 +122,8 @@
             <ul class="nav nav-treeview">
               <div class="user-panel mt-3 pb-3 mb-3 d-flex" *ngFor="let group of GDetails">
                 <div class="image">
-                  <img src="http://www.landvist.xyz/images/{{group.Img}}" class="img-circle elevation-2"
-                    alt="Group Image" width="20px" height="20px">
+                  <img src="{{group.Img}}" class="img-circle elevation-2"
+                     width="20px" height="20px">
                 </div>
                 <div class="info">
                   <a [routerLink]="['/groups/member/groupfolder',group.ID_Group]" class="d-block">{{group.NameG}}</a>
@@ -154,7 +141,7 @@
   <div class="content-wrapper">
 
     <div class="container" *ngFor="let F of GFolders">
-      <div id="product-container" *ngFor="let D of groupD">
+      <div id="product-container" *ngFor="let D of GroupsDetail">
         <div class="row">
           <div class="col-md-12">
             <br>
@@ -354,7 +341,7 @@
                   </div>
                 </a>
                 <a *ngIf="houses.Owner != ID_user" target="_blank"><a *ngFor="let F of GFolders"><a
-                      *ngFor="let D of groupD"
+                      *ngFor="let D of GroupsDetail"
                       [routerLink]="['/groups/member/groupfolder/itemlist/details',D.ID_Group,F.ID_Folder,houses.ID_Property]"
                       [queryParams]="{page: activePage}">
                       <div class="title" style="white-space: nowrap; 	
@@ -364,12 +351,12 @@
                     </a></a></a>
                 <div class=""><a *ngIf="houses.Owner == ID_user" [routerLink]="['/houses',houses.ID_Property]"
                     [queryParams]="{page: activePage}"><img width="100%" height="200px"
-                      src="http://www.landvist.xyz/images/{{houses.ImageEX}}"
+                      src="{{houses.ImageEX}}"
                       class="img-responsive notebook-img rounded"></a>
-                  <a *ngIf="houses.Owner != ID_user"><a *ngFor="let F of GFolders"><a *ngFor="let D of groupD"
+                  <a *ngIf="houses.Owner != ID_user"><a *ngFor="let F of GFolders"><a *ngFor="let D of GroupsDetail"
                         [routerLink]="['/groups/member/groupfolder/itemlist/details',D.ID_Group,F.ID_Folder,houses.ID_Property]"
                         [queryParams]="{page: activePage}"><img width="100%" height="200px"
-                          src="http://www.landvist.xyz/images/{{houses.ImageEX}}"
+                          src="{{houses.ImageEX}}"
                           class="img-responsive notebook-img rounded"></a></a></a>
                   <!---->
                   <label class="text-center " *ngIf="houses.PPStatus == 'ขายแล้ว'"><i class="fas fa-window-close"
@@ -405,7 +392,7 @@
                     <li>เพิ่มลงกลุ่มเมื่อ {{houses.Created| timeAgoThai}}</li>
                   </ul>
                   <ul>
-                    <li>โดยคุณ {{houses.CostestimateB}}</li>
+                    <li>โดยคุณ {{houses.Firstname}}  {{houses.Lastname}}</li>
                   </ul>
                 </div>
               </div>
@@ -454,7 +441,7 @@
                   </div>
                 </a>
                 <a *ngIf="land.Owner != ID_user" target="_blank"><a *ngFor="let F of GFolders"><a
-                      *ngFor="let D of groupD"
+                      *ngFor="let D of GroupsDetail"
                       [routerLink]="['/groups/member/groupfolder/itemlist/details',D.ID_Group,F.ID_Folder,land.ID_Lands]"
                       [queryParams]="{page: activePage}">
                       <div class="title" style="white-space: nowrap; 	
@@ -464,12 +451,12 @@
                     </a></a></a>
                 <div class=""><a *ngIf="land.Owner == ID_user" [routerLink]="['/lands',land.ID_Lands]"
                     [queryParams]="{page: activePage}"><img width="100%" height="200px"
-                      src="http://www.landvist.xyz/images/{{land.ImageEX}}"
+                      src="{{land.ImageEX}}"
                       class="img-responsive notebook-img rounded"></a>
-                  <a *ngIf="land.Owner != ID_user"><a *ngFor="let F of GFolders"><a *ngFor="let D of groupD"
+                  <a *ngIf="land.Owner != ID_user"><a *ngFor="let F of GFolders"><a *ngFor="let D of GroupsDetail"
                         [routerLink]="['/groups/member/groupfolder/itemlist/details',D.ID_Group,F.ID_Folder,land.ID_Lands]"
                         [queryParams]="{page: activePage}"><img width="100%" height="200px"
-                          src="http://www.landvist.xyz/images/{{land.ImageEX}}"
+                          src="{{land.ImageEX}}"
                           class="img-responsive notebook-img rounded"></a></a></a>
                   <!---->
                   <label class="text-center " *ngIf="land.PPStatus == 'ขายแล้ว'"><i class="fas fa-window-close"
@@ -501,7 +488,7 @@
                     <li>เพิ่มลงกลุ่มเมื่อ {{land.Created| timeAgoThai}}</li>
                   </ul>
                   <ul>
-                    <li>โดยคุณ {{land.Place}}</li>
+                    <li>โดยคุณ {{land.Firstname}}  {{land.Lastname}}</li>
                   </ul>
                 </div>
               </div>
