--- a/src/app/components/index/index.component.css
+++ b/src/app/components/index/index.component.css
@@ -1,9 +1,20 @@
+@media (max-width:629px) {
+  img#optionalstuff {
+    display: none;
+  }
+}
+
 .parallax1 {
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.responsive {
+  max-width: 100%;
+  height: auto;
 }
 
 /*.parallax1{
@@ -37,6 +48,7 @@ min-height: 1000px;
   max-width: 600px;
   width: 90%;
   will-change: transform, opacity;
+  
 }
 
 .inline-photo.is-visible {
@@ -77,88 +89,4 @@ header.is-visible {
 }
 
 /*Scroll down button*/
-*,
-:after,
-:before {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-section {
-  height: 100vh;
-  width: 100%;
-  display: table;
-
-}
-
-p {
-  color: white;
-  font-family: arial;
-  display: table-cell;
-  text-align: center;
-  vertical-align: middle;
-}
-
-.scroll-down {
-  opacity: 1;
-  -webkit-transition: all .5s ease-in 3s;
-  transition: all .5s ease-in 3s;
-}
-
-.scroll-down {
-  position: absolute;
-  bottom: 20px;
-  left: 50%;
-  margin-left: -16px;
-  display: block;
-  width: 32px;
-  height: 32px;
-  border: 2px solid rgb(0, 0, 0);
-  background-size: 14px auto;
-  border-radius: 50%;
-  z-index: 2;
-  -webkit-animation: bounce 2s infinite 2s;
-  animation: bounce 2s infinite 2s;
-  -webkit-transition: all .2s ease-in;
-  transition: all .2s ease-in;
-  transform: scale(1)
-}
-
-.scroll-down:before {
-  position: absolute;
-  top: calc(50% - 8px);
-  left: calc(50% - 6px);
-  transform: rotate(-45deg);
-  display: block;
-  width: 12px;
-  height: 12px;
-  content: "";
-  border: 2px solid rgb(0, 0, 0);
-  border-width: 0px 0 2px 2px;
-}
-
-@keyframes bounce {
-
-  0%,
-  100%,
-  20%,
-  50%,
-  80% {
-    -webkit-transform: translateY(0);
-    -ms-transform: translateY(0);
-    transform: translateY(0);
-  }
-
-  40% {
-    -webkit-transform: translateY(-10px);
-    -ms-transform: translateY(-10px);
-    transform: translateY(-10px);
-  }
-
-  60% {
-    -webkit-transform: translateY(-5px);
-    -ms-transform: translateY(-5px);
-    transform: translateY(-5px);
-  }
-}
+  
