--- a/src/app/components/lands/lands-detail/lands-detail.component.html
+++ b/src/app/components/lands/lands-detail/lands-detail.component.html
@@ -1,5 +1,8 @@
 <img src="https://www.234.in.th/images/2019/05/03/derek-torsani-22x.png" class="img-fluid" alt="Responsive image"
   style="width:100%;">
+  <br>
+  <app-loading-spinner *ngIf="showSpinner==true"></app-loading-spinner>
+  <br>
 <section *ngFor="let lands of results" class="container">
   <div id="web-body">
     <div id="page-content">
@@ -249,22 +252,11 @@
               <div class="row">
                 <div class="col-xs-12">
                   <h3>ข้อมูลติดต่อ</h3>
-                  <nav>
-                    <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                      <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home"
-                        role="tab" aria-controls="nav-home" aria-selected="true">ผู้ติดต่อบุคคลที่ 1</a>
-                      <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab"
-                        aria-controls="nav-profile" aria-selected="false">ผู้ติดต่อบุคคลที่ 2</a>
-                      <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab"
-                        aria-controls="nav-contact" aria-selected="false">ผู้ติดต่อบุคคลที่ 3</a>
-                    </div>
-                  </nav>
-                  <div class="tab-content" id="nav-tabContent">
                     <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
                       <div class="container ">
-                        <h4><i class="fas fa-file-alt"></i> ผู้ติดต่อบุคคลที่ 1</h4>
                         <div class="container">
-                          <div *ngFor="let item of selectContact">
+                          <div *ngFor="let item of contactUser ;index as i">
+                            <h4><i class="fas fa-file-alt"></i> ผู้ติดต่อบุคคลที่ {{i+1}} </h4>
                             <form>
                               <div class="form-row">
                                 <div class="form-group col-md-4">
@@ -287,7 +279,7 @@
                                 </div>
                               </div>
                               <div class="form-row">
-                                <div class="form-group col-md-4">
+                                <div class="form-group col-md-4 col-sm-12">
                                   <label for="inputEmail4">อีเมล</label>
                                   <div class="specificate-panel">
                                     <div class="specificate-list">
@@ -319,128 +311,7 @@
                           </div>
                         </div>
                       </div>
-                    </div>
-                    <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
-                      <div class="container">
-                        <h4><i class="fas fa-file-alt"></i> ผู้ติดต่อบุคคลที่ 2</h4>
-                        <div class="container">
-                          <div *ngFor="let item of selectContact2">
-                            <form>
-                              <div class="form-row">
-                                <div class="form-group col-md-4">
-                                  <label for="inputEmail4">ชื่อผู้ติดต่อ</label>
-                                  <div class="specificate-panel">
-                                    <div class="specificate-list">
-                                      <div class="specificate-title">คุณ</div>
-                                      <div class="specificate-info">{{item.Name}}</div>
-                                    </div>
-                                  </div>
-                                </div>
-                                <div class="form-group col-md-4">
-                                  <label for="inputEmail4">สถานะ</label>
-                                  <div class="specificate-panel">
-                                    <div class="specificate-list">
-                                      <div class="specificate-title">สถานะ</div>
-                                      <div class="specificate-info">{{conS2}}</div>
-                                    </div>
-                                  </div>
-                                </div>
-                              </div>
-                              <div class="form-row">
-                                <div class="form-group col-md-4">
-                                  <label for="inputEmail4">อีเมล</label>
-                                  <div class="specificate-panel">
-                                    <div class="specificate-list">
-                                      <div class="specificate-title">อีเมล</div>
-                                      <div class="specificate-info">{{item.Email}}</div>
-                                    </div>
-                                  </div>
-                                </div>
-                                <div class="form-group col-md-4">
-                                  <label for="inputEmail4">เบอร์โทร</label>
-                                  <div class="specificate-panel">
-                                    <div class="specificate-list">
-                                      <div class="specificate-title">เบอร์โทร</div>
-                                      <div class="specificate-info">{{item.Phone}}</div>
-                                    </div>
-                                  </div>
-                                </div>
-                                <div class="form-group col-md-4">
-                                  <label for="inputEmail4">ไลน์</label>
-                                  <div class="specificate-panel">
-                                    <div class="specificate-list">
-                                      <div class="specificate-title">ไลน์</div>
-                                      <div class="specificate-info">{{item.Line}}</div>
-                                    </div>
-                                  </div>
-                                </div>
-                              </div>
-                            </form>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
-                      <div class="container">
-                        <h4><i class="fas fa-file-alt"></i> ผู้ติดต่อบุคคลที่ 3</h4>
-                        <div class="container">
-                          <div *ngFor="let item of selectContact3">
-                            <form>
-                              <div class="form-row">
-                                <div class="form-group col-md-4">
-                                  <label for="inputEmail4">ชื่อผู้ติดต่อ</label>
-                                  <div class="specificate-panel">
-                                    <div class="specificate-list">
-                                      <div class="specificate-title">คุณ</div>
-                                      <div class="specificate-info">{{item.Name}}</div>
-                                    </div>
-                                  </div>
-                                </div>
-                                <div class="form-group col-md-4">
-                                  <label for="inputEmail4">สถานะ</label>
-                                  <div class="specificate-panel">
-                                    <div class="specificate-list">
-                                      <div class="specificate-title">สถานะ</div>
-                                      <div class="specificate-info">{{conS3}}</div>
-                                    </div>
-                                  </div>
-                                </div>
-                              </div>
-                              <div class="form-row">
-                                <div class="form-group col-md-4">
-                                  <label for="inputEmail4">อีเมล</label>
-                                  <div class="specificate-panel">
-                                    <div class="specificate-list">
-                                      <div class="specificate-title">อีเมล</div>
-                                      <div class="specificate-info">{{item.Email}}</div>
-                                    </div>
-                                  </div>
-                                </div>
-                                <div class="form-group col-md-4">
-                                  <label for="inputEmail4">เบอร์โทร</label>
-                                  <div class="specificate-panel">
-                                    <div class="specificate-list">
-                                      <div class="specificate-title">เบอร์โทร</div>
-                                      <div class="specificate-info">{{item.Phone}}</div>
-                                    </div>
-                                  </div>
-                                </div>
-                                <div class="form-group col-md-4">
-                                  <label for="inputEmail4">ไลน์</label>
-                                  <div class="specificate-panel">
-                                    <div class="specificate-list">
-                                      <div class="specificate-title">ไลน์</div>
-                                      <div class="specificate-info">{{item.Line}}</div>
-                                    </div>
-                                  </div>
-                                </div>
-                              </div>
-                            </form>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+                    </div>                   
                 </div>
               </div>
               <hr>
