--- a/src/app/components/login/resetpassword/resetpassword.component.html
+++ b/src/app/components/login/resetpassword/resetpassword.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <div class="container PMB">
   <div class="row">
-    <div class="col-md-8 jumbotron col-12 col-md-6" style="height: 650%;">
+    <div class="col-md-8 jumbotron col-sm-12 col-lg-8  page-content-auto" >
       <div class="text-center" style="margin: 20%">
         <h1>การรีเซ็ทรหัสผ่าน</h1>
         <p class="font-weight-light  ">
@@ -12,7 +12,7 @@
       </div>
     </div>
     <div class="col-md-4 ">
-      <div class="col-xs-12- col-sm-6 col-md-12 ">
+      <div class="col-xs-12 col-sm-6 col-md-12 page-content ">
         <header class="text-center">
           <img src="http://www.landvist.xyz/images/Defult/logo2.png" width="300" height="250" alt="">
           <br>
