--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-top navbar-expand-lg navbar-light bd-light "   style="background-color: #fffdfd;">
+<nav class="navbar fixed-top navbar-expand-xl navbar-light bd-light "   style="background-color: #fffdfd;">
     <a class="navbar-brand" routerLink="/index">
         <img src="http://www.landvist.xyz/images/Defult/Navbar.png" width="30" height="30" class="d-inline-block align-top" alt="">
         PropertyMB
@@ -7,7 +7,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse " id="navbarText">
-          <ul class="navbar-nav mr-auto ">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0 ">
             <li *ngIf="auth.isLoggedIn()" class="nav-item active">
               <a class="nav-link " routerLink="/home">หน้าหลัก <span class="sr-only">(current)</span></a>
             </li>
@@ -48,7 +48,7 @@
             <ul class="navbar-nav mr-auto">
               
               <li *ngIf="auth.isLoggedIn()" class="nav-item">
-                <a class="nav-link" routerLink="/profile" ><img src="{{ auth.getUserDetails()?.Profile1}}" alt=""><i class="fa fa-user-circle"></i></a>
+                <a class="nav-link" routerLink="/profile" ><i class="fa fa-user-circle"></i></a>
               </li>
               <li *ngIf="auth.isLoggedIn()" class="nav-item active" >
                 <a class="nav-link" routerLink="/profile">{{ auth.getUserDetails()?.Email }}</a>
