--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -7,7 +7,7 @@
     <div class="col-md-3 col-sm-2 ">
       <br>
       <div class="card">
-        <img src="http://www.landvist.xyz/images/{{Profileimage}}"  class="card-img-top">
+        <img src="{{Profileimage}}"  class="card-img-top">
         <div class="card-body">
           <a [routerLink]="[ '/updateprofile' ]" data-container="body" data-toggle="popover" data-placement="bottom" data-content="แก้ไข รูปภาพของคุณ"><i class="fas fa-edit"></i></a>
         </div>
